k8s/patient-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
        - name: patient
          image: rajeevreddy1511/patient-service-1:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
