k8s/visit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visit
  template:
    metadata:
      labels:
        app: visit
    spec:
      containers:
        - name: visit
          image: rajeevreddy1511/visit-service-1:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
