k8s/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: ClusterIP
  selector:
    app: patient
  ports:
    - name: http
      port: 3000
      targetPort: 3000
