k8s/visit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visit-service
spec:
  type: ClusterIP
  selector:
    app: visit
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
